# dobot_cr10_ros2

./: LICENSE  README.md
dobot_cr10_description/: CMakeLists.txt  package.xml
dobot_cr10_description/config/: dobot_controllers.yaml
dobot_cr10_description/launch/: dobot_bringup.launch.py  dobot_sim.launch.py
dobot_cr10_description/meshes/: Link-1.STL  Link-2.STL  Link-3.STL  Link-4.STL  Link-5.STL  Link-6.STL  base_link.STL
dobot_cr10_description/scripts/: fast_joint_control.py
dobot_cr10_description/src/: joint_command_bridge.py
dobot_cr10_description/urdf/: dobot_cr10.urdf.xacro
dobot_cr10_hardware/: CMakeLists.txt  dobot_cr10_hardware.xml  package.xml
dobot_cr10_hardware/include/dobot_cr10_hardware/: dobot_cr10_hardware_interface.hpp
dobot_cr10_hardware/src/: dobot_cr10_hardware_interface.cpp  dobot_hardware_node.cpp
dobot_cr10_moveit_config/: .setup_assistant  CMakeLists.txt  package.xml
dobot_cr10_moveit_config/config/: dobot_cr10.ros2_control.xacro  dobot_cr10.srdf  dobot_cr10.urdf.xacro  initial_positions.yaml  joint_limits.yaml  moveit_controllers.yaml
dobot_cr10_moveit_config/launch/: demo.launch.py  move_group.launch.py  moveit_rviz.launch.py  rsp.launch.py  setup_assistant.launch.py  spawn_controllers.launch.py  static_virtual_joint_tfs.launch.py  warehouse_db.launch.py
